# mongo-cxx-sample

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build-win64.md
3rd/mongo-c-driver-1.23.3/: build-win64.md
3rd/mongo-cxx-driver-r3.7.1/: build-win64.md
test/: test_connection.cpp  test_cxx_connection.cpp
